compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___invalid_callback_type_2.snap
---
source: compiler-core/src/type_/tests/use_.rs
assertion_line: 215
expression: "\nlet x = fn(f) { \"Hello, \" ++ f() }\nuse <- x()\nlet n = 1\nn + 2\n"
---
----- SOURCE CODE

let x = fn(f) { "Hello, " ++ f() }
use <- x()
let n = 1
n + 2


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:5:1
  │
5 │ n + 2
  │ ^^^^^

Expected type:

    String

Found type:

    Int
